tests/parser/valid/struct_and_global.src
struct Point {
    int x;
    int y;
}

int global = 10;

fn main() {
    Point p;
}
