tests/parser/invalid/test_unclosed_block.src
fn main() {
    int x = 5;
    if (x > 1) {
        int y = 10;
}